force-app/main/default/objects/EnergyUseConversionMapping__mdt/EnergyUseConversionMapping__mdt.object-meta.xml
<CustomObject>
    <description
    >Custom Mapping for Energy Use Measurement Unit in Arcadia to Supported unit measurement value in SF</description>
    <label>Energy Use Conversion Mapping</label>
    <pluralLabel>Energy Use Conversion Mappings</pluralLabel>
</CustomObject>