force-app/main/default/objects/EnergyUseConversionMapping__mdt/fields/ApiUnitOfMeasurementFrom__c.field-meta.xml
<CustomField>
    <fullName>ApiUnitOfMeasurementFrom__c</fullName>
    <label>API Unit Of Measurement From</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>