force-app/main/default/objects/EnergyUseConversionMapping__mdt/fields/ApiUnitOfMeasurementTo__c.field-meta.xml
<CustomField>
    <fullName>ApiUnitOfMeasurementTo__c</fullName>
    <label>API Unit Of Measurement To</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>